--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "fmt": "prettier --write '**/*' --ignore-unknown"
   },
   "dependencies": {
-    "@upstash/qstash": "^2.7.12",
+    "@upstash/workflow": "^0.2.2",
     "fast-glob": "^3.3.2",
     "next": "14.2.15",
     "react": "^18",
